--- a/styles/index.pcss
+++ b/styles/index.pcss
@@ -20,16 +20,17 @@ body {
 
 .app {
   min-height: 100vh;
-  max-width: 960px;
-  margin: 0 auto;
   padding-left: 1rem;
   display: flex;
+  margin: 0 auto;
+  max-width: 900px;
+  width: 100%;
+  justify-content: center;
 }
 
 .app > nav {
-  max-width: 20rem;
-  min-width: 14rem;
-  width: 25%;
+  flex-shrink: 0;
+  width: 240px;
   background-color: var(--box--backgroundColor);
   color: var(--box--foregroundColor);
   border-radius: 2px;
@@ -113,8 +114,9 @@ body {
 }
 
 .app > main {
-  flex: 1;
+  flex-grow: 0;
   margin: 1rem;
+  max-width: calc(200% / 3);
 }
 
 .controls {
