--- a/styles/mobile.pcss
+++ b/styles/mobile.pcss
@@ -36,4 +36,8 @@
   #navigation-toggle:checked + nav .navigation {
     display: block;
   }
+
+  .app > main {
+    max-width: initial;
+  }
 }
